test/testdata/e2e/tcp_proxy_multi_chain_dataflow/listener-1.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Listener
metadata:
  name: tcp-proxy-df-1
spec:
  name: tcp-proxy-df-1
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 7781
  filter_chains:
    - filters:
        - name: envoy.filters.network.tcp_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
            stat_prefix: tcp-echo-df-1
            cluster: tcp-echo-df-cluster-1
