test/testdata/e2e/tcp_proxy_multi_chain_dataflow/tcp-echo-servers.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcp-echo-df-1
  labels:
    app: tcp-echo-df-1
spec:
  ports:
    - name: tcp
      port: 9001
  selector:
    app: tcp-echo-df-1
---
apiVersion: v1
kind: Service
metadata:
  name: tcp-echo-df-2
  labels:
    app: tcp-echo-df-2
spec:
  ports:
    - name: tcp
      port: 9001
  selector:
    app: tcp-echo-df-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-echo-df-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcp-echo-df-1
  template:
    metadata:
      labels:
        app: tcp-echo-df-1
    spec:
      containers:
        - name: tcp-echo
          image: docker.io/istio/tcp-echo-server:1.3
          imagePullPolicy: IfNotPresent
          args: ["9001", "backend-one"]
          ports:
            - containerPort: 9001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-echo-df-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcp-echo-df-2
  template:
    metadata:
      labels:
        app: tcp-echo-df-2
    spec:
      containers:
        - name: tcp-echo
          image: docker.io/istio/tcp-echo-server:1.3
          imagePullPolicy: IfNotPresent
          args: ["9001", "backend-two"]
          ports:
            - containerPort: 9001
