test/testdata/e2e/tcp_proxy_multi_chain_dataflow/virtual-service-1.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: tcp-proxy-df-1
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: tcp-proxy-df-1
